<resources>
    <string name="app_name">TheGame</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="delete_btn">delete</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="Game1Name" translatable="false">Tsu</string>
    <string name="Game2Name" translatable="false">BomberGame</string>
    <string name="Game3Name" translatable="false">RacerGame</string>
    <string name="no_user">No User Connected!</string>
    <string name="login_btn">Login</string>
    <string name="action_settings">Settings</string>
    <string name="lan_pref">Language</string>
    <string name="theme_pref">Theme</string>
    <string name="vol_pref">Volume</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_achievements">Achievements</string>
    <string name="bomber_bombs_placed_text">Bombs Placed</string>
    <string name="bomber_damage_dealt_text">Damage Dealt</string>
    <string name="bomber_hp_remaining_text">Remaining HP</string>
    <string name="racer_time_survived_text">Time Survived</string>
    <string name="tsu_score_text">Score</string>
    <string name="stat_missing_text">Statistic Name Missing!</string>
</resources>
