<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SeekBarPreference
        android:defaultValue="100"
        android:key="vol_pref"
        android:max="100"
        android:min="0"
        android:title="@string/vol_pref" />

    <ListPreference
        android:defaultValue="EN"
        android:entries="@array/languages_keys"
        android:entryValues="@array/languages_values"
        android:key="lan_pref"
        android:summary="%s"
        android:title="@string/lan_pref" />

    <ListPreference
        android:defaultValue="Light"
        android:entries="@array/theme_keys"
        android:entryValues="@array/theme_values"
        android:key="theme_pref"
        android:summary="%s"
        android:title="@string/theme_pref" />

</PreferenceScreen>